[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/harvey/plot_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/harvey/plots/Plot.gd" type="Script" id=2]
[ext_resource path="res://src/harvey/plots/SeedPlanted.gd" type="Script" id=3]
[ext_resource path="res://src/harvey/plots/Watered.gd" type="Script" id=4]
[ext_resource path="res://src/harvey/plots/ReadyForHarvest.gd" type="Script" id=5]
[ext_resource path="res://addons/beehive/machine.gd" type="Script" id=6]
[ext_resource path="res://src/harvey/plots/ReadyForSeed.gd" type="Script" id=7]
[ext_resource path="res://src/harvey/plots/NeedsWater.gd" type="Script" id=8]
[ext_resource path="res://addons/core/resources/fonts/debug-info-text.tres" type="DynamicFont" id=9]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "needs-water",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "ready-for-harvest",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "ready-for-seed",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "seed-planted",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "watered",
"speed": 5.0
} ]

[node name="Plot" type="Node2D"]
script = ExtResource( 2 )

[node name="Detectbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectbox"]
shape = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "ready-for-seed"
playing = true

[node name="Machine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("ReadyForSeed")

[node name="ReadyForSeed" type="Node" parent="Machine"]
script = ExtResource( 7 )

[node name="SeedPlanted" type="Node" parent="Machine"]
script = ExtResource( 3 )

[node name="NeedsWater" type="Node" parent="Machine"]
script = ExtResource( 8 )

[node name="Watered" type="Node" parent="Machine"]
script = ExtResource( 4 )

[node name="ReadyForHarvest" type="Node" parent="Machine"]
script = ExtResource( 5 )

[node name="StateLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -31.0
margin_right = 20.0
margin_bottom = -16.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "state"
text = "state"
fit_content_height = true
scroll_active = false

[connection signal="body_entered" from="Detectbox" to="." method="_on_Detectbox_body_entered"]
[connection signal="body_exited" from="Detectbox" to="." method="_on_Detectbox_body_exited"]
